# kix-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  API_STANDARDS.md  BIBLE_CHANGELOG.md  BUILDER_JOURNEY.md  BUILD_HISTORY.md  BUILD_PROCESS.md  Dockerfile  ENGINEERING.md  GAME_LIBRARY.md  GAMIFICATION_AUDIT.md  KIX_BIBLE.md  KIX_GAMIFICATION_BIBLE.md  MASTER_BLUEPRINT.md  MERCHANT_FLOW_TRUTH.md  MONETIZATION.md  MONETIZATION_V2.md  Makefile  PLATFORM_OVERVIEW.md  PRODUCTION.md  README.md  SIGNIFICANCE.md  SYSTEM_HOW_IT_WORKS.md  SYSTEM_REFLECTION.md  TEAM_TRAINING.md  TRINITY_ANALYSIS.md  USER_FLOW_TRUTH.md  WORLD_CLASS_ROADMAP.md  alembic.ini  docker-compose.yml  i18n_extracted_tutorials_sample.csv  i18n_translate_estimate.txt  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
app/: api_standards.py  config.py  database.py  deps.py  main.py  models.py  pacing_controller.py  quality_score.py  redis_client.py  region.py  saga.py  saga_definitions.py  schemas.py  security.py
config/: centrifugo.json  nginx.conf
data/: deprecation_registry.json  game_catalog.json  game_catalog_enriched.json
deployment/: dns-routing.md  docker-compose.cn.yml  docker-compose.indonesia.yml  multi-region.md
docs/: all-bugs-catalog.md  bedok-pilot-ops.md  bible-gap-report-2026-05-31.md  branch-protection.md  buyer-journey-iteration-trace.md  ci-cd-guide.md  dr-plan.md  game-library.md  i18n-adding-a-locale.md  library-scaleup-plan-140-to-340.md  load-test-recommendations.md  monitoring-dashboard.md  observability-dashboard.md  psp-onboarding.md  push-deployment.md  rfc-enterprise-tier.md  rfc-myr-native-wallet.md  rfc-storehub-fasttrack.md  round1-marketplace-fixes.md  round3-tuning-attempt.md  security-audit.md  security-best-practices.md  stripe-live-readiness.md  the-machine.md  trinity-3t-handbook.md  trisoul-deployment.md  tutorial-as-first-campaign-plan.md  wave-n-load-soak-2026-05-31.md
landing/: admin-alpha-cohort.html  admin-support.html  alpha-feedback.html  alpha.html  calculator.html  connect.html  enterprise.html  for-chains.html  game-catalog-demo.html  how-we-build.html  index.html  merchant-help.html  my-case-studies.html  play.html  portal-tiktok-preview.html  portal.html  pos-checkout.html  pricing.html  sg-case-studies.html  storefront.html  trinity-artifacts.html
load_tests/: .gitignore  __init__.py  analyze.py  baseline.py  breaking.py  host_metrics.py  locustfile.py  run_tests.sh  scenarios.py  seed_data.py  stress.py
lua/: energy_confirm.lua  energy_grant.lua  energy_refund.lua  energy_regen.lua  energy_reserve.lua  rate_limit.lua  (+2 more)
(+1022 files in other folders)
