[project]
name = "kix-platform"
version = "0.1.0"
description = "KiX Gamification Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "qrcode[pil]>=7.4",
    "python-multipart>=0.0.9",
    "stripe>=7.0.0",
    "geoalchemy2>=0.14.0",
    "cryptography>=41.0.0",
    # i18n runtime — Project Fluent (ICU MessageFormat). Catalog files
    # live in app/i18n/catalogs/. Required by app.i18n at import time.
    "fluent.runtime>=0.4.0",
    # Locale-aware number/date/currency formatting (CLDR-backed).
    # Wired through app.i18n.formatting & app.i18n.currency.
    "babel>=2.14",
    # Email/push template rendering (Jinja2 fragments per locale).
    # See app/email_templates/ + app/services/email_template_service.py.
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
ml = [
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
